# StateManager

./: .gitignore  CMakeLists.txt  README.md
config/: sm_config.json  sm_plugin_example.json  sm_plugin_index.txt
config/sm_plugin_description/: example_plugin_description.json  plugin1_description.json
config/sm_plugin_index/: example_plugin.json  plugin1.json
implementation/: CMakeLists.txt
implementation/app/: CMakeLists.txt  main.cpp
implementation/class_loader/: CMakeLists.txt  class_loader.cpp  class_loader.h  class_loader_manager.cpp  class_loader_manager.h  class_loader_register_macro.h
implementation/class_loader/shared_library/: CMakeLists.txt  exceptions.h  shared_library.cpp  shared_library.h
implementation/class_loader/utility/: CMakeLists.txt  class_factory.cpp  class_factory.h  class_loader_utility.cpp  class_loader_utility.h
implementation/common/: CMakeLists.txt  environment.h  file.cpp  file.h  log.h  macros.h  types.h  util.h
implementation/communication/: CMakeLists.txt  common_def.h
implementation/communication/client/: client_impl.cpp  client_impl.h
implementation/communication/fastdds_type/: message.cxx  message.h  message.idl  messageCdrAux.hpp  messageCdrAux.ipp  messagePubSubTypes.cxx  messagePubSubTypes.h  type.h
implementation/communication/server/: server_impl.cpp  server_impl.h
implementation/communication/test/: main.cpp
implementation/configuration/: CMakeLists.txt  configuration.cpp  configuration.h
implementation/plugin_manager/: CMakeLists.txt  plugin_description.cpp  plugin_description.h  plugin_manager.cpp  plugin_manager.h
implementation/plugins/: CMakeLists.txt
implementation/plugins/example_plugin/: CMakeLists.txt  example_plugin.cpp
implementation/state_manager/: CMakeLists.txt  state_manager.cpp  state_manager.h  state_manager_impl.cpp  state_manager_impl.h
interface/sm/plugin/: sm_plugin_interface.h
interface/sm/state/: state_manager.h
